--- a/apps/metaord/templates/metaord/fragments/statuses_tags.html
+++ b/apps/metaord/templates/metaord/fragments/statuses_tags.html
@@ -1,9 +1,10 @@
-{% if statuses %}
+{% if order_statuses_counts %}
     <h4>
         <span>Статусы:</span>
-        <a href="./" class="label label-info">Все</a>
-        {% for status in statuses %}
-            <a href="?{{ arg_name }}={{ status.0 }}" class="label {{ status.2 }}">{{ status.1 }}</a>
+        <a href="./" class="label label-info">Все ({{ orders_count }})</a>
+        {% for ind, label, cls, counts in order_statuses_counts %}
+            <a href="?{{ arg_name }}={{ ind }}" class="label {{ cls }}">{{ label }}
+                ({{ counts }})</a>
         {% endfor %}
     </h4>
 {% endif %}
